--- a/client/.cproject
+++ b/client/.cproject
@@ -27,7 +27,7 @@
 									<listOptionValue builtIn="false" value="../boost_locale"/>
 									<listOptionValue builtIn="false" value="../boost_system"/>
 								</option>
-								<option id="gnu.cpp.compiler.option.preprocessor.def.270694429" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols"/>
+								<option id="gnu.cpp.compiler.option.preprocessor.def.270694429" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.901924763" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1276366381" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
@@ -41,8 +41,9 @@
 									<listOptionValue builtIn="false" value="/usr/include/boost/system/"/>
 									<listOptionValue builtIn="false" value="/usr/include/boost"/>
 								</option>
-								<option id="gnu.cpp.link.option.libs.88543748" superClass="gnu.cpp.link.option.libs" valueType="libs">
+								<option id="gnu.cpp.link.option.libs.88543748" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="boost_system"/>
+									<listOptionValue builtIn="false" value="boost_thread"/>
 									<listOptionValue builtIn="false" value="boost_locale"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1508722933" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
